﻿
2007-04-15  Bernd Ernesti <veega@users.sourceforge.net>
	* editor/gtk/editor.c, meta-server/main.c, server/gtk/main.c,
	server/main.c: #include <locale.h> where needed.

2007-04-09  Roland Clobus <rclobus@bigfoot.com>
	* pioneers.nsi.in: Added a better check for the Gtk+ runtime, and
        allow the installer to continue, even when no runtime is found.

2007-04-08  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Reorder the language codes (now alphabetical)
	
2007-03-04  Roland CLobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c, common/gtk/guimap.h, client/gtk/identify.c: Fix
	for #1589423. Sets a minimum size, to avoid drawing a polygon with
	only (0,0) as coordinates.
	
2007-02-18  Roland Clobus <rclobus@bigfoot.com>
	* server/player.c: Fix for #1473765. Don't recycle player objects when
	a (re)connect is in progress.
	* common/game.c, common/game.h, common/state.h, common/cards.c,
	server/develop.c, client/callback.h, client/gtk/settingscreen.c,
	client/common/client.c, client/common/develop.c: Renamed
	STAT_UNIVERSITY enum.
	* client/gtk/develop.c: Cluster development cards of the same type.

2006-11-18  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/computer_names: Fixed a typo (present since 2000 :-)
	
2006-10-14  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c: Move the chat panel to the right or the bottom of
	the screen. Based on a patch by Rich Harkins <rich@worldsinfinite.com>
	which required a restart.
	* ChangeLog: Enabled a BOM, so the comment about utf-8 is no longer
	required.
	* configure.ac, server/gtk/main.c, server/server.c, server/server.h,
	server/main.c: Replaced alarm with g_timeout_add.
	* common/network.c: Added wrapper functions for reporting error
	messages.

2006-10-01  Rich Harkins <rich@worldsinfinite.com>
	* Makefile.am, server/gtk/main.c: Launch the client from the server.

2006-09-16  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Subversion repository is at 0.10.3.